[package]
name = "dep-hell-find-out"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

signature_1_3_1 = { package = "signature", version = "=1.3.2" }
signature_1_6_1 = { package = "signature", version = "1.6.0" }
